--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -3,11 +3,11 @@
     <string name="welcome">Bienvenue!</string>
     <string name="your_name">Quel est votre nom?</string>
     <string name="next">Suivant</string>
-    <string name="hi">Suivant</string>
-    <string name="male">Male</string>
-    <string name="female">Female</string>
-    <string name="age">Age</string>
-    <string name="Weight">Weight</string>
-    <string name="Height">Height</string>
-    <string name="calculate">Calculate</string>
+    <string name="hi">Salut</string>
+    <string name="male">Mãle</string>
+    <string name="female">Femelle</string>
+    <string name="age">˜Âge</string>
+    <string name="Weight">Poids</string>
+    <string name="Height">Hauteur</string>
+    <string name="calculate">Calculer</string>
 </resources>
