--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -10,4 +10,9 @@
     <string name="Weight">Poids</string>
     <string name="Height">Hauteur</string>
     <string name="calculate">Calculer</string>
+    <string name="Result">Your BMI Result</string>
+    <string name="high">High</string>
+    <string name="Obesity">You have Class i Obesity</string>
+    <string name="new_calc">New Calc</string>
+
 </resources>
