--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">IMOC</string>
-    <string name="welcome">Bienvenue!</string>
+    <string name="welcome">Bienvenue</string>
     <string name="your_name">Quel est votre nom?</string>
     <string name="next">Suivant</string>
     <string name="hi">Salut</string>
@@ -11,7 +11,7 @@
     <string name="Height">Hauteur</string>
     <string name="calculate">Calculer</string>
     <string name="Result">Your BMI Result</string>
-    <string name="high">High</string>
+
     <string name="Obesity">You have Class i Obesity</string>
     <string name="new_calc">New Calc</string>
 
