--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">IMC</string>
-    <string name="welcome">BEM VINDO!</string>
+    <string name="welcome">BEM VINDO</string>
     <string name="your_name">Qual é o seu nome?</string>
     <string name="next">Próximo</string>
     <string name="hi">Olá!</string>
@@ -10,8 +10,7 @@
     <string name="Weight">Peso</string>
     <string name="Height">Altura</string>
     <string name="calculate">Calcular</string>
-    <string name="Result">Your BMI Result</string>
-    <string name="high">High</string>
+    <string name="Result">Resultado do seu IMC</string>
     <string name="Obesity">You have Class i Obesity</string>
     <string name="new_calc">New Calc</string>
 </resources>
