--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="welcome">Welcome!</string>
     <string name="your_name">What\'s your name?</string>
     <string name="next">Next</string>
-    <string name="hi">Hi !</string>
+    <string name="hi">Hi </string>
     <string name="male">Male</string>
     <string name="female">Female</string>
     <string name="age">Age</string>
@@ -11,7 +11,6 @@
     <string name="Height">Height</string>
     <string name="calculate">Calculate</string>
     <string name="Result">Your BMI Result</string>
-    <string name="high">High</string>
     <string name="Obesity">You have Class i Obesity</string>
     <string name="new_calc">New Calc</string>
 
