--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,16 @@
     <string name="Height">Height</string>
     <string name="calculate">Calculate</string>
     <string name="Result">Your BMI Result</string>
-    <string name="Obesity">You have Class i Obesity</string>
     <string name="new_calc">New Calc</string>
+
+    /* ---------------------------------------------- */
+
+    <string name="under_weight">You are below your ideal weight!</string>
+    <string name="normal_weight">You have normal body weight!</string>
+    <string name="over_weight">You are slightly overweight!</string>
+    <string name="class1_weight">You have Class I Obesity</string>
+    <string name="class2_weight">You have Class II Obesity</string>
+    <string name="class3_weight">You have Class III Obesity</string>
+
 
 </resources>
