--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -14,11 +14,22 @@
     <string name="new_calc">New Calc</string>
 
     /*------------------------------------------------------------*/
+
     <string name="under_weight">Vous êtes en dessous de votre poids idéal !</string>
     <string name="normal_weight">Vous avez un poids corporel normal !</string>
     <string name="over_weight">Vous êtes légèrement en surpoids !</string>
     <string name="class1_weight">Vous avez une obésité de classe I</string>
     <string name="class2_weight">Vous avez une obésité de classe II</string>
     <string name="class3_weight">Vous avez une obésité de classe III</string>
+
+    /*------------------------------------------------------------*/
+
+    <string name="underweight">Insuffisance pondérale</string>
+    <string name="normal">Normal</string>
+    <string name="overweight">Surpoids</string>
+    <string name="obesity1">Obésité Classe I</string>
+    <string name="obesity2">Obésité Classe II</string>
+    <string name="obesity3">Obésité Classe III</string>
+
 
 </resources>
